0026 ReplicatorG
* Add Machine information panel
* Add support for control of a regulated cooling fan
* Bugfix: save operation was broken by the color change feature.
* Bugfix: Don't force refresh of machine position, because this caused
problems with concurrent move requests.
* Add color selector dialog to preferences, to allow model &
background color to be configured.
* Clarification: fix homing comments for thing-o-matic start.gcode
* Bugfix: handle multiple stepper toolheads correctly
* Add tool command recognition to the s3g decompiler.
* Add virtual printer, to make testing easier
* Add experimental cupcake profile for gen3 machines with stepper extruders.
* display 2 digits of precision in the control panel's axis position indicator.
* Revert "Update launch4j version. Need to build on a windows box to
upgrade ReplicatorG.exe"
* Actually, don't make continuous jog default, it would break printers
that don't support it.
* Make continuous jog mode the default preference.

0025 ReplicatorG
New features:
* Print-O-Matic integrated and enabled by default
* Store/recall home position support: No more need to modify start.gcode when your Z height changes.
* Drag & Drop support: drop .stl or .gcode files into ReplicatorG to open them.
* Frostruder support for Thing-O-Matic
* Support for local firmware.xml files (file:// urls)
* Support for internet proxies, using the default Java proxy configuration.
* Added Skeinforge 40, for experimental purposes
* Updates to most core libraries
* Skeinforge 35 is now default
* Wipe commands removed from cupcake profiles
* HPB default temperature lowered to 110 degrees

Bug fixes:
* Rewritten gcode execution engine: fixes many bugs, such as 'gcode parser is null'
* Homing feedrate specified in machine profile
* Numerous Ultimaker, RaMPS, and RepRap improvements
* Numerous UI tweaks to improve look&feel on OS X
* Resize main window so tooltips don't refresh the whole view


0024 ReplicatorG