@@ -1,3 +1,5 @@
+0027 ReplicatorG ALPHA
+	
 0026 ReplicatorG
 * Add Machine information panel
 * Add support for control of a regulated cooling fan
